[metadata]
name = rlearn
version = 0.0.2
author = MorvanZhou
author_email = morvanzhou@hotmail.com
description = reinforcement learning algorithms in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.woa.com/TIPE/rlearn
project_urls =
    Bug Tracker = https://git.woa.com/TIPE/rlearn/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
; apple m1 silicon should use conda command first:
; conda install -c apple tensorflow-deps
    tensorflow==2.9.2; python_version >= '3.7' and platform_system == "Windows"
    tensorflow==2.9.2; python_version >= '3.7' and platform_system == "Linux"
    tensorflow==2.9.2; python_version >= '3.7' and platform_system == "Darwin" and platform_machine != "arm64"
    tensorflow-macos==2.9.2; python_version >= '3.7' and platform_system == "Darwin" and platform_machine == "arm64"
    tensorflow-metal==0.5.0; python_version >= '3.7' and platform_system == "Darwin" and platform_machine == "arm64"
    tensorflow_probability==0.17.0

[options.packages.find]
where = src

[options.extras_require]
build =
    tox==3.24.3
    build
    twine
    pylint
test =
    gym[classic_control]==0.25.0
    grpcio-tools==1.42.0
